Fixing gap and scrolling in ClickListRevealText

--- a/bin/core-files/css/C_Engine.css
+++ b/bin/core-files/css/C_Engine.css
@@ -1233,7 +1233,7 @@ ul.no-indent {
 .clickListTextHolder{
 	position: relative;
 	float: right;
-	right: 40px;
+	right: 50px;
 	background-color: #eeeeee;
 	padding-top: 8px;
 	-moz-border-radius-bottomright: 8px;
